syntax = "proto3";
package uniswap_oracle.v1;

import "gogoproto/gogo.proto";
// import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/peggyjv/sommelier/x/uniswap-oracle/types";

// Claim is an interface that directs its rewards to an attached bank account.
message Claim {
    int64  weight    = 1;
    string recipient = 2; 
}

message UniswapPair {
    string        id           = 1;
	string        reserve0     = 2;
	string        reserve1     = 3;
	string        reserve_usd  = 4;
	UniswapToken  token0       = 5;
	UniswapToken  token1       = 6;
	string        token0_price = 7;
	string        token1_price = 8;
	string        total_supply = 9;
}

// Token is the returned uniswap token representation
// decimals is the number 
message UniswapToken {
    string decimals = 1;
    string id       = 2;
}


// Params oracle parameters
message Params {}